--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,6 +15,12 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('add_user') }}">Add User</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('add_post') }}">Add Blog Post</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('posts') }}">Posts</a>
+        </li>
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
