--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -18,6 +18,7 @@
         {{ our_user.id }}. <a href="{{
         url_for('update', id=our_user.id)}}"
         > {{ our_user.name }}</a>
+        - {{ our_user.username }}
         - {{ our_user.email }}
         - {{ our_user.age }}
         <a href="{{
@@ -40,6 +41,12 @@
             {{ form.name.label(class="form-label") }}
 
             {{ form.name(class="form-control") }}
+            <br/>
+
+            {{ form.username.label(class="form-label") }}
+
+            {{ form.username(class="form-control") }}
+
             <br/>
             {{ form.email.label(class="form-label") }}
 
@@ -73,6 +80,7 @@
         {{ our_user.id }}. <a href="{{
         url_for('update', id=our_user.id)}}"
         > {{ our_user.name }}</a>
+        - {{ our_user.username }}
         - {{ our_user.email }}
         - {{ our_user.age }}
         <a href="{{
