--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,9 +12,21 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('name') }}">Name</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('add_user') }}">Add User</a>
-        </li>
+        {% if current_user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
+          </li>
+        {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('login')}}">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('add_user') }}">Register</a>
+          </li>
+        {% endif %}
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('add_post') }}">Add Blog Post</a>
         </li>
