refactored to bins

--- a/templates/edit_bin.html
+++ b/templates/edit_bin.html
@@ -36,7 +36,7 @@
 
 </div>
 
-<a href="{{ url_for('posts')}}" class="btn btn-outline-secondary btn-sm">Back To Blog</a>
+<a href="{{ url_for('bins')}}" class="btn btn-outline-secondary btn-sm">Back To Bins</a>
 
 
 
