--- a/templates/add_bin.html
+++ b/templates/add_bin.html
@@ -14,7 +14,7 @@
 
 
 
-<h1>Add Blog Post...</h1>
+<h1>Add Bin...</h1>
 	<br/>
 <div class="shadow p-3 mb-5 bg-body rounded">
 	<form method="POST">
