--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -28,16 +28,12 @@
           </li>
         {% endif %}
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('add_post') }}">Add Blog Post</a>
+          <a class="nav-link" href="{{ url_for('add_bin') }}">Add Bin</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('posts') }}">Posts</a>
+          <a class="nav-link" href="{{ url_for('bins') }}">Bins</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-light" type="submit">Search</button>
-      </form>
     </div>
   </div>
 </nav>
