--- a/templates/bins.html
+++ b/templates/bins.html
@@ -14,18 +14,33 @@
 <br/>
 
 {% for bin in bins %}
-<div class="shadow p-3 mb-5 bg-body rounded">
-	<h2>{{ bin.title }}</h2>
-    By: {{ bin.poster.name }} <br/>
-	<small> {{ bin.date_posted }} </small>
-    <br/><br/>
-    {{ bin.content }}
-	<br/><br/>
-	<a href="{{ url_for('bins', id=bin.id)}}" class="btn btn-outline-secondary btn-sm">View Bin</a>
 {% if bin.poster_id == current_user.id %}
-	<a href="{{ url_for('edit_bin', id=bin.id)}}" class="btn btn-outline-secondary btn-sm">Edit Bin</a>
-	<a href="{{ url_for('delete_bin', id=bin.id)}}" class="btn btn-outline-danger btn-sm">Delete Bin</a>
-{% endif %}
+
+	<div class="shadow p-3 mb-5 bg-body rounded">
+		<h2>{{ bin.title }}</h2>
+		In Charge: {{ bin.poster.name }} <br/>
+		<small>
+			{% if bin.released %}
+			The Bin is released (no worker is currently on about to pick it up)<br/>
+    {% else %}
+			The Bin is not released (worker is currently on about to pick it up)<br/>
+			{% endif %}
+			{% if bin.available %}
+			The Bin is available (should be picked up)<br/>
+    {% else %}
+			The Bin is not available (shouldn't be picked up)<br/>
+			{% endif %}
+
+
+		</small>
+		<br/><br/>
+		<br/><br/>
+		<a href="{{ url_for('bin', id=bin.id)}}" class="btn btn-outline-secondary btn-sm">View Bin's Attributes</a>
+	{% if bin.poster_id == current_user.id %}
+		<a href="{{ url_for('edit_bin', id=bin.id)}}" class="btn btn-outline-secondary btn-sm">Edit Bin</a>
+		<a href="{{ url_for('delete_bin', id=bin.id)}}" class="btn btn-outline-danger btn-sm">Delete Bin</a>
+	{% endif %}
+		{% endif %}
 </div>
 <br/>
 {% endfor %}
