--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,12 +6,6 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('user',name='Aviv') }}">User Profile</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('name') }}">Name</a>
-        </li>
         {% if current_user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
@@ -31,7 +25,7 @@
           <a class="nav-link" href="{{ url_for('add_bin') }}">Add Bin</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('bins') }}">Bins</a>
+          <a class="nav-link" href="{{ url_for('bins') }}">Your Bins</a>
         </li>
       </ul>
     </div>
