--- a/templates/edit_bin.html
+++ b/templates/edit_bin.html
@@ -49,16 +49,14 @@
 		{# boolean field 'released' #}
 		<div class="form-check">
 			{{ form.released(class="form-check-input", id="released-checkbox") }}
-			{{ form.released.label(class="form-check-label", for="released-checkbox") }} Released
-			(no worker is currently on about to pick it up)
+			{{ form.released.label(class="form-check-label", for="released-checkbox") }} (Released)
 		</div>
 		<br/>
 
 		{# Another boolean field 'available' #}
 		<div class="form-check">
 			{{ form.available(class="form-check-input", id="available-checkbox") }}
-			{{ form.available.label(class="form-check-label", for="available-checkbox") }} Available
-			(should be picked up)
+			{{ form.available.label(class="form-check-label", for="available-checkbox") }} )Available)
 		</div>
 		<br/>
 
