--- a/templates/scatter_map.html
+++ b/templates/scatter_map.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
+
+{% block content %}
+
 <html>
 <head>
     <title>Scatter Map</title>
@@ -74,3 +77,5 @@
     </script>
 </body>
 </html>
+
+{% endblock %}
