--- a/templates/bins.html
+++ b/templates/bins.html
@@ -23,12 +23,14 @@
 			{% if bin.released %}
 			The Bin is released (no worker is currently on about to pick it up)<br/>
     {% else %}
-			The Bin is not released (worker is currently on about to pick it up)<br/>
+			The Bin is not released (worker is currently on about to pick it up)
+<br/>
 			{% endif %}
 			{% if bin.available %}
 			The Bin is available (should be picked up)<br/>
     {% else %}
-			The Bin is not available (shouldn't be picked up)<br/>
+			The Bin is not available (shouldn't be picked up)
+<br/>
 			{% endif %}
 
 
@@ -39,10 +41,16 @@
 	{% if bin.poster_id == current_user.id %}
 		<a href="{{ url_for('edit_bin', id=bin.id)}}" class="btn btn-outline-secondary btn-sm">Edit Bin</a>
 		<a href="{{ url_for('delete_bin', id=bin.id)}}" class="btn btn-outline-danger btn-sm">Delete Bin</a>
-	{% endif %}
+		{% if not bin.released %}
+		<a href="{{ url_for('make_released', id=bin.id)}}" class="btn btn-outline-danger btn-sm">Release bin</a>
+		{% endif %}
+		{% if not bin.available %}
+		<a href="{{ url_for('make_available', id=bin.id)}}" class="btn btn-outline-danger btn-sm">Make Bin Available</a>
+		{% endif %}
 		{% endif %}
 </div>
 <br/>
+{% endif %}
 {% endfor %}
 <br/>
 {% endblock %}
