--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
   <body>
   {% include 'navbar.html' %}
   <br/>
+  <link rel="shortcut icon" href="{{url_for('static', filename='favicon.ico')}}">
   <div class="container">
     {% block content %}
     {% endblock %}
