--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,7 +14,7 @@
             <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
           </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('bins') }}">Your Bins</a>
+          <a class="nav-link" href="{{ url_for('bins') }}">Faulty Bins</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('scatter_map') }}">Map</a>
